<resources>
    <string name="app_name">TestND</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="autor">Made by sdvFrost</string>
    <string name="descrRabbitND">rabbitOnPinkBackground</string>

    <string name="settings">Settings</string>
    <string name="MovieInfo">MovieInfo</string>
    <string name="titleName">Title:</string>
    <string name="yearName">Year:</string>
    <string name="rankingName">Ranking:</string>
    <string name="ratingName">Rating:</string>
    <string name="plotName">Plot:</string>
    <string name="favorite">favorite</string>
    <string name="title_activity_ViewerFavorite">FavoriteMovie</string>
    <string name="waitContent">Wait For Loading Content</string>
    <string name="movieList">movie_list</string>
    <string name="action_search">Search</string>

    <string name="pref_title_display_name_from">Set Count Film From</string>
    <string name="pref_title_display_name_to">Set Count Film To</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
